# tp_authentication

./: README.md  docker-compose.yml  pyproject.toml
auth_service/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
